WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147452
REGRESSION: Inline-block baseline is wrong when zero-width replaced child is present
https://bugs.webkit.org/show_bug.cgi?id=147452
Summary
REGRESSION: Inline-block baseline is wrong when zero-width replaced child is ...
Dave Hyatt
Reported
2015-07-30 12:44:38 PDT
This is a regression caused by mishandling of zero width replaced element children in line layout.
Attachments
Patch
(9.16 KB, patch)
2015-07-30 12:48 PDT
,
Dave Hyatt
mmaxfield
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2015-07-30 12:48:15 PDT
Created
attachment 257846
[details]
Patch
Myles C. Maxfield
Comment 2
2015-07-31 12:51:18 PDT
Comment on
attachment 257846
[details]
Patch r=me
Simon Fraser (smfr)
Comment 3
2015-07-31 12:51:40 PDT
Comment on
attachment 257846
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=257846&action=review
> Source/WebCore/rendering/line/LineWidth.h:62 > + bool hasCommitted() { return m_committedWidth > 0 || m_hasCommittedReplaced; }
const
> Source/WebCore/rendering/line/LineWidth.h:100 > + bool m_hasUncommittedReplaced; > + bool m_hasCommittedReplaced;
Would be nice to use initializers here bool m_hasUncommittedReplaced { false }; etc. Maybe convert them all.
Dave Hyatt
Comment 4
2015-09-09 07:43:19 PDT
Landed in
r189540
.
Myles C. Maxfield
Comment 5
2015-09-09 09:38:48 PDT
(In reply to
comment #4
)
> Landed in
r189540
.
!! :D
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug